<resources>
    <string name="app_name">MyHealth</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="login">登录</string>
    <string name="register_account"><u>注册账号</u></string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="input_question">请输入密保问题</string>
    <string name="usernameout">用户名不存在</string>
    <string name="answer_error">回答错误</string>
    <string name="set_error">修改失败</string>
    <string name="input_forget">确认找回</string>
    <string name="input_answer">请输入密保问题答案</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="rePasswordWrong">两次密码不一致</string>


    <string name="title_activity_my_account">MyAccountActivity</string>

    <string name="title_activity_my_contact">MyContactActivity</string>

    <string name="title_activity_my_password">MyPasswordActivity</string>

    <string name="title_activity_splash">SplashActivity</string>

    <string name="my_health">健康</string>
    <string name="lucky">发现</string>
    <string name="my_account">我的</string>

    <string name="health_item_no_data">-</string>

    <string name="health_item_height">身高(cm)</string>
    <string name="health_item_weight">体重(kg)</string>
    <string name="health_item_heart_rate">心率(bpm)</string>
    <string name="health_item_lung">肺活量</string>
    <string name="health_item_temperature">体温(℃)</string>
    <string name="health_item_walking">步数(步)</string>
    <string name="health_item_blood_presure">血压\n(mmHg)</string>
    <string name="health_item_blood_sugar">血糖\n(mmol/L)</string>
    <string name="health_item_change"><u>修改</u></string>


    <!-- my list data -->
    <string-array name="my_list_data">

        <item>我的联系人</item>

        <item>我的账户</item>

        <item>我的密码</item>

    </string-array>

    <string name="title_activity_my_contact_new">MyContactNewActivity</string>

    <string name="title_activity_my_contact_edit">MyContactEditActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
