<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:src="@drawable/user_male4_50" />

        <EditText
            android:id="@+id/registerEdtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="42dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/input_username"
            android:textColor="@color/font_grey"
            android:textSize="@dimen/login_edt_font">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/registerEdtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/registerEdtUsername"
            android:layout_below="@+id/registerEdtUsername"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textColor="@color/font_grey"
            android:textSize="@dimen/login_edt_font" />

    <EditText
            android:id="@+id/edtPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/registerEdtUsername"
            android:layout_below="@+id/registerEdtPassword"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/input_password_again"
            android:inputType="textPassword"
            android:textColor="@color/font_grey"
            android:textSize="@dimen/login_edt_font" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtPasswordAgain"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:background="@color/blue"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/login_font" />

    </RelativeLayout>

